@@ -1,3 +1,8 @@
+2018-10-11  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* dvispc.c: Support page-independence even with long
+	specials. Use MAX_... constants for error messages.
+
 2018-10-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* dvispc.c: Clean up code, more comments. Mostly revert
